--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@types/react": "^16.8.23",
-    "@types/react-native": "^0.60.0",
+    "@react-native-community/async-storage": "1.6.1",
+    "@types/lodash": "4.14.136",
+    "@types/react": "16.8.23",
+    "@types/react-native": "0.60.0",
+    "axios": "0.19.0",
+    "fe-api": "file:src/common/constants/api",
     "fe-common": "file:src/common",
     "fe-components": "file:src/components",
     "fe-models": "file:src/models",
     "fe-theme": "file:src/theme",
-    "jetifier": "^1.6.3",
+    "jetifier": "1.6.3",
+    "lodash": "4.17.15",
     "react": "16.8.6",
     "react-native": "0.60.0",
-    "react-native-fast-image": "^7.0.2",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-typescript-transformer": "^1.2.12",
-    "react-navigation": "^3.11.1",
-    "typescript": "^3.5.3"
+    "react-native-fast-image": "7.0.2",
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-typescript-transformer": "1.2.12",
+    "react-navigation": "3.11.1",
+    "react-redux": "7.1.0",
+    "redux": "4.0.4",
+    "redux-saga": "1.0.5",
+    "typescript": "3.5.3"
   },
   "devDependencies": {
     "@babel/core": "7.5.0",
